feat: add wallet generation skill (.01 x402), remove policy editor + execution monitor
- Add paywalled GET /skill/wallet/generate endpoint (.01 USDC via x402)
- Generate Base-compatible keypairs using crypto + @noble/hashes
- Frontend: handle parameterless skills in OpenClaw Gateway invoke panel
- Remove PolicyEditor and ExecutionMonitor from desktop
- Update standalone pinion-openclaw-skill repo with wallet route
- Update catalog, plugin manifest, and server registrations

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-# Anthropic API key for the Pinion Agent chat
-ANTHROPIC_API_KEY=sk-ant-...
+# Anthropic (for Pinion Agent chat)
+ANTHROPIC_API_KEY=your-anthropic-api-key
 
-# Comma-separated production origins for CORS (API service)
-CORS_ORIGIN=https://your-3d-site.up.railway.app,https://your-inner-site.up.railway.app
-
-# API URL for the inner-site to call (set at build time for CRA)
-REACT_APP_API_URL=https://your-api.up.railway.app
+# x402 / OpenClaw Skill
+ADDRESS=0x101Cd32b9bEEE93845Ead7Bc604a5F1873330acf
+FACILITATOR_URL=https://facilitator.payai.network
+NETWORK=base
