--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express": "^4.21.2"
     },
     "devDependencies": {
-        "playwright": "^1.58.2"
+        "playwright": "^1.58.2",
+        "sharp": "^0.34.5"
     }
 }
